Anjali_007:AdmSysUserPom Updated at 13:24

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Anjali Giri\AppData\Local\Temp\testng-eclipse-855476743\testng-customsuite.xml</span>
+                    <span>C:\Users\Anjali Giri\AppData\Local\Temp\testng-eclipse--1233380041\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TestPackage.LoginTestCase" class="method navigator-link" hash-for-method="LoginPageLink">LoginPageLink</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.TestPackage.AdmSysUserTestCase" class="method navigator-link" hash-for-method="AdmSysUser">AdmSysUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.TestPackage.LoginTestCase</span>
+              <span class="class-name">com.TestPackage.AdmSysUserTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginPageLink">
-                  </a> <!-- LoginPageLink -->
-                  <span class="method-name">LoginPageLink</span>
+                  <a name="AdmSysUser">
+                  </a> <!-- AdmSysUser -->
+                  <span class="method-name">AdmSysUser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Anjali Giri\AppData\Local\Temp\testng-eclipse-855476743\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Anjali Giri\AppData\Local\Temp\testng-eclipse--1233380041\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.TestPackage.LoginTestCase&quot;&gt;
+      &lt;class name=&quot;com.TestPackage.AdmSysUserTestCase&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;LoginPageLink&quot;/&gt;
+          &lt;include name=&quot;AdmSysUser&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.TestPackage.LoginTestCase --&gt;
+      &lt;/class&gt; &lt;!-- com.TestPackage.AdmSysUserTestCase --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginPageLink')
-data.setCell(0, 2, 'com.TestPackage.LoginTestCase')
-data.setCell(0, 3, 5157);
+data.setCell(0, 1, 'AdmSysUser')
+data.setCell(0, 2, 'com.TestPackage.AdmSysUserTestCase')
+data.setCell(0, 3, 15560);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,20 +213,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">3 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.TestPackage.LoginTestCase</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">NextPageTitle</span>
-                <br/>
-                <span class="ignored-method-name">method</span>
-                <br/>
-                <span class="ignored-method-name">LoginTest</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -235,18 +224,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.TestPackage.LoginTestCase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.TestPackage.AdmSysUserTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">5408 ms</span>
+                <span class="method-start">11440 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">LoginPageLink</span>
-                <span class="method-start">5471 ms</span>
+                <span class="method-name">AdmSysUser</span>
+                <span class="method-start">11574 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
