--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Login</td><td>LoginTestCase.LoginTest()[pri:0, instance:com.TestPackage.LoginTestCase@6574a52c]<br/></td></tr>
+</table>
